--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "docxtemplater": "^3.68.2",
+    "file-saver": "^2.0.5",
     "googleapis": "^171.4.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "pizzip": "^3.2.0",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
